--- a/src/main.css
+++ b/src/main.css
@@ -1,12 +1,8 @@
 body {
-  background: purple;
+  background: teal;
+  color: #fff;
 }
 
 header {
-  color: red;
-}
-
-.test {
-  display: flex;
-  font-size: 1.8rem;
+  color: darkred;
 }
