--- a/src/main.css
+++ b/src/main.css
@@ -1,8 +1,21 @@
-body {
-  background: teal;
-  color: #fff;
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-header {
-  color: darkred;
+html {
+  font-size: 62.5%;
+}
+
+body {
+  min-height: 100vh;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.6rem;
+}
+
+.header {
+  font-family: 'Herr Von Muellerhoff', cursive;
 }
