--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,9 @@
+:root {
+  --primary-light: #f1f5f9;
+  --primary-dark: #1e293b;
+  --primary-gold: #c59d5f;
+}
+
 *,
 *::after,
 *::before {
@@ -11,11 +17,44 @@ html {
 }
 
 body {
-  min-height: 100vh;
   font-family: 'Montserrat', sans-serif;
+  /* font-family: 'Herr Von Muellerhoff', cursive; */
   font-size: 1.6rem;
 }
 
-.header {
-  font-family: 'Herr Von Muellerhoff', cursive;
+header {
+  background-color: var(--primary-dark);
+}
+
+nav {
+  padding: 4rem 0;
+  border-bottom: 5px solid var(--primary-gold);
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 28px;
+}
+
+li {
+  font-size: 1.8rem;
+}
+
+li > a:link,
+li > a:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: var(--primary-light);
+  border-bottom: 3px solid transparent;
+  padding-bottom: 6px;
+  transition: 0.2s ease-in-out;
+}
+
+li > a:hover,
+li > a:active {
+  color: var(--primary-gold);
+  border-bottom: 3px solid var(--primary-gold);
 }
