--- a/src/main.css
+++ b/src/main.css
@@ -58,7 +58,8 @@ li > a:visited {
 }
 
 li > a:hover,
-li > a:active {
+li > a:active,
+li > a.active {
   color: var(--primary-gold);
   border-bottom: 3px solid var(--primary-gold);
 }
